# news_feed_airflow_pipeline

./: .gitignore  README.md  debug_main.py  main.py  pyproject.toml
config/: keywords.json  news_sources.json
core/: daily_digest_agent.py  fetch_rss_news.py  log_handler.py  send_telegram.py  similarity.py  store_news.py  types.py  utils.py
data/: news_feed.db  query.py
include/: fetch_data.py  fetch_news.py  fetch_rss_news.py  log_handler.py  query.py  send_telegram.py  store_data.py  store_news.py  utils.py
tests/: test_api_fallback.py  test_fetch_rss_news.py  test_pipeline_logic.py
